zipkin, different keycloak client